# myointeract_ui_course

./: .gitignore  course_ui_colab.ipynb  pyproject.toml
myosuite/core/: config.py  muscle_conditions.py  myouser_configs.py  myouser_hydra_cli.py
myosuite/integrations/musclemimic/: actor_onnx.py  mjlab_policy_runner.py
myosuite/simhive/myo_sim/: left_lightsaber.xml  myoarm_saber_body.xml  right_lightsaber.xml  saber_targets.xml
myosuite/simhive/uitb_sim/: circular_steering.xml  mobl_arms_index.xml  mobl_arms_index_eepos_pointing.xml  mobl_arms_index_llc_eepos_pointing.xml  steering.xml
myosuite/simhive/uitb_sim/assets/: mobl_arms_hand_assets.xml  mobl_arms_hand_body.xml  mobl_arms_index_assets.xml  mobl_arms_index_assets_AL67.xml  mobl_arms_index_assets_AL68.xml  mobl_arms_index_assets_AL69.xml  mobl_arms_index_assets_AL70.xml  mobl_arms_index_assets_AL71.xml  mobl_arms_index_assets_AL72.xml  mobl_arms_index_assets_AL73.xml  mobl_arms_index_assets_AL74.xml  mobl_arms_index_assets_AL75.xml  mobl_arms_index_assets_AL76.xml  mobl_arms_index_assets_AL77.xml  mobl_arms_index_assets_AL78.xml  mobl_arms_index_assets_AL79.xml  mobl_arms_index_assets_AL80.xml  mobl_arms_index_assets_AL81.xml  mobl_arms_index_assets_AL82.xml  mobl_arms_index_assets_AL83.xml  (+26 more)
myosuite/terms/: base_action.py
myosuite/utils/: onnx_checkpoint.py
tutorials/myouser/: course_myointeract_colab.ipynb  course_ui_colab.ipynb  gradio_ui.py  viser_viewer_ext.py
tutorials/myouser/gradio_configs/: ar.json  mobile-typing-5c-words.json  pointing.json  public-display-4-buttons.json  test1.json
(+9 files in other folders)
