[project]
name = "myosuite-course-ui"
version = "0.1.0"
description = "Standalone myosuite package for the MyoUser course UI (Gradio + mjlab training)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache 2.0" }
authors = [
    { name = "Florian Fischer", email = "florian.fischer26@gmail.com" },
]
dependencies = [
    "mujoco>=3.2",
    "numpy",
    "torch>=2.0",
    "ml-collections>=0.1.1",
    "omegaconf",
    "hydra-core",
    "etils[epath]>=1.3.0",
    "wandb>=0.21.0",
    "gradio>=5.0",
    "gradio-rangeslider",
    "onnxruntime",
]

[project.optional-dependencies]
warp = [
    "mujoco-warp>=3.7.0",
]

[project.entry-points."mjlab.tasks"]
myosuite = "myosuite.envs.myo.backends.mjlab"

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Use git-tracked files to discover package data (ensures JSON configs are
# bundled into the wheel when installing via pip install git+...)
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["myosuite*", "tutorials*"]

[tool.setuptools.package-data]
"myosuite" = ["**/*.xml", "**/*.stl", "**/*.obj", "**/*.png"]
"tutorials.myouser" = ["gradio_configs/*.json"]
